Nutch Change Log

Release 2.1 - Current Development
* NUTCH-1438 ParserJob support for option -reparse (ferdy)

* NUTCH-1437 HostInjectorJob to accept lines with or without protocol (ferdy)

* NUTCH-1435 Host jobs throw NullPointerException with MySQL (ferdy via lewismc)

* NUTCH-1428 GeneratorMapper should not initialize filters/normalizers when they are disabled (ferdy)

* NUTCH-1427 Reuse SelectorEntry in Generator. (ferdy)

* NUTCH-1411 nutchgora fetcher.store.content does not work (Alexander Kingson via ferdy) 

* NUTCH-1426 HostDb close() should close store instead of flush (ferdy)

* NUTCH-1425 DbUpdaterJob declares PREV_SIGNATURE on input twice (ferdy)

* NUTCH-1424 fix fetcher timelimit logging (ferdy)

* NUTCH-1423 Remove unused fields in LanguageIndexingFilter (ferdy)

* NUTCH-1306 Add option to not commit and clarify existing solr.commit.size (ferdy)

Release 2.0 (08/06/2012) ddmmyyy
Full Jira report - https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=10680&version=12314893

* NUTCH-1391 readdb -stats fires java.io.EOFException (jnioche)

* NUTCH-1400 Remove developer -core option for bin/nutch (jnioche)

* NUTCH-1399 TestProtocolHttpClient fails (jnioche)

* NUTCH-1404 Nutch script fails to find job file in deploy mode (sidabatra, jnioche)

* NUTCH-1401 Upgrade to Hadoop 1.0.3  (jnioche)

* NUTCH-1396 Upgrade Tika 1.1 (jnioche)

* NUTCH-1392 -force and -resume arguments being ignored in ParserJob (ferdy via lewismc)

* NUTCH-1379 NPE when reprUrl is null in ParseUtil (ferdy)

* NUTCH-1378 HostDb NullPointerException (ferdy)

* NUTCH-XX Commit to add configuration for separation of ant distribution targets (lewismc + jnioche)

* NUTCH-1364 Add a counter for malformed urls (Jason Trost via lewismc)

* NUTCH-1361 Fix mishandling of malformed urls in generator job (Jason Trost via lewismc)

* NUTCH-1366 speed up indexing by eliminating the indexreducer (ferdy)

* NUTCH-1362 Fix error handling of urls with empty fields (lewis, ferdy)
